tests/files/lexer_tests/should_fail/068.cmdr
a = 3; /* This comment doesn't get terminated